PipOs - Better Interface, System_info, Config Generation

--- a/packages/attack/component/configs/config.conf
+++ b/packages/attack/component/configs/config.conf
@@ -1,5 +1,9 @@
 # Test Configuration
 
+# PipOs Configuration
+# @target_file="/etc/config.conf";
+#
+
 {{#components}}
   content="{{test_content}}"
-{{#components}}
+{{/components}}
